--- a/about.html
+++ b/about.html
@@ -35,6 +35,12 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+  <script type="text/javascript" id="mierucaOptimizejs">
+    window.__optimizeid = window.__optimizeid || [];__optimizeid.push([1198937690]);
+    (function () {var fjs = document.createElement('script');fjs.type = 'text/javascript';
+    fjs.async = true;fjs.id = "fjssync";var timestamp = new Date;fjs.src = 'https://dev.opt.mieru-ca.com/service/js/mieruca-optimize-dev.js?v=' + timestamp.getTime();
+    var x = document.getElementsByTagName('script')[0];x.parentNode.insertBefore(fjs, x);})();
+  </script>
 </head>
 
 <body>
